# hangul-syllable-editor

./: Cargo.toml  LICENSE-APACHE  README.md  Trunk.toml  hangul-syllable-app-7e1dc9c4d3297804.js  hangul-syllable-app-872da5205bb061ae.js  index.html
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/app/: Cargo.toml  build.rs  index.html
crates/app/assets/: icon.icns
crates/app/src/: i18n.rs  main.rs  platform.rs
crates/app/src/app/: deferred.rs  editor.rs  mod.rs  paint.rs  ui_components.rs  ui_drawing.rs  ui_hangul_browser.rs  ui_old_hangul.rs  ui_selectors.rs  ui_syllables.rs  ui_templates.rs  ui_top.rs  ui_typetest.rs  ui_widgets.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/core/: engine.rs  glyph.rs  groups.rs  hangul.rs  mod.rs  old_hangul.rs  render.rs  rules.rs  types.rs
crates/core/src/core/generator/: default.rs  dkb.rs  hanterm.rs  minzkn.rs  mod.rs  zik.rs
crates/core/src/io/: adobe_kr_9.rs  export.rs  ks_x_1001.rs  mod.rs  project.rs
